--- a/src/code/index.css
+++ b/src/code/index.css
@@ -1,10 +1,10 @@
 body{
-    background-color: #FFCDB2;
+    background-color: #45062E;
     font-family: 'Montserrat', sans-serif;
 }
 
 h2{
-    color: #6D6875;
+    color: #fFCAD4;
 }
 
 h4{
